Fix Story Script font not displaying on mobile
Added quotes around "Story Script" font-family values. CSS requires
font names containing spaces to be quoted, otherwise browsers fail
to match the font and fall back to defaults.

--- a/Dfc.css
+++ b/Dfc.css
@@ -22,7 +22,7 @@ header{
 h1{
   top:0;
   z-index: 9999;
-  font-family: Story Script;
+  font-family: "Story Script";
   font-size: 70px;
   letter-spacing: 2px;
   font-kerning: 3px;
@@ -33,18 +33,18 @@ h1{
 
 }
 
-h2{font-family: Story Script;
+h2{font-family: "Story Script";
   font-size: 30px;
   color: blue;  
   padding-left: 30px;
 }
-h3{font-family:Story Script;
+h3{font-family: "Story Script";
   font-size: 30px;
   color: darkslategray;  
   padding-left: 50%;
 }
 h4{
-    font-family:Story Script;
+    font-family: "Story Script";
                 font-size: 20px; 
                 color: darkslategrey; 
                 text-align:center;
@@ -54,7 +54,7 @@ h5{  font-family:Lato;
   font-size: 20px; 
   color: blue; 
 }
-  a.one: link { font-family:Story Script;
+  a.one: link { font-family: "Story Script";
                 font-size: 70px; 
                 text-decoration: none;}
 
@@ -151,7 +151,7 @@ img{
 #slides{
    width:80%;
 
- font: Story Script;
+ font-family: "Story Script";
  font-size: 40px;
  
 }
@@ -160,7 +160,7 @@ img{
 footer{
   position: fixed;
   bottom: 0; 
-  font-family: Story Script;
+  font-family: "Story Script";
   letter-spacing: 3px;
   font-weight: 900;
   font-size: 15px;
